<resources>
    <string name="app_name">ReadyToEnjoy</string>
    <string name="password">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="btnLogin">Iniciar Sesion</string>
    <string name="registro">No estoy registrado todavia</string>
    <string name="activities">Aventuras</string>
    <string name="myActivities">Mis Aventuras</string>
    <string name="adventurers">Aventureros</string>
    <string name="porfile">Perfil</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="email">Mail</string>
    <string name="btnRegistrar">Registrar</string>
    <string name="title">Titulo</string>
    <string name="createAct">Crea Actividad</string>
    <string name="location">Localización</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="crear">Aceptar</string>
    <string name="prueba">Pru</string>
    <string name="editAct">Editar Actividad</string>
    <string name="editar">Editar</string>
    <string name="infoAct">Actividad</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>